<resources>
    <string name="app_name">Easy Trace</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="inbox">Inbox</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="nivesh_wanninayaka">Nivesh Wanninayaka</string>
    <string name="verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_passenger_find_map">Map</string>
</resources>